# ai-spec-driven-boilerplate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TEST-ME.md  WORKSHOP.md  agent.py  alembic.ini  assessment.html  index.html  package-lock.json  package.json  plan.html  playwright.config.ts  preflight.sh  pyproject.toml  reset.sh  streamlit_out.txt
.claude/: settings.json
.claude/agents/: agent-builder.md  analyser.md  analyst.md  code-generator.md  deployer.md  designer.md  drift-auditor.md  engineer.md  executor.md  plan-reviewer.md  planner.md  qa-auditor.md  qa.md  researcher.md  reviewer.md  spec-reviewer.md  spec-writer.md  tech-designer.md
.claude/commands/: build.md  gates.md  plan.md  spec-check.md  spec-new-capability.md
.claude/hooks/: push-after-commit.sh  session-start.sh
.claude/rules/: harness.md
.github/: copilot-instructions.md
.github/agents/: drift-auditor.agent.md  dry-auditor.agent.md  link-validator.agent.md  plan-reviewer.agent.md  planner.agent.md  spec-reviewer.agent.md
.github/instructions/: spec-files.instructions.md
.github/prompts/: plan.prompt.md  spec-check.prompt.md  spec-new-capability.prompt.md
agent/: config.py  db.py  domain.py  eval_lint.py  evals.py  gate_eval.py  graph.py  llm.py  memory.py  observability.py  runner.py  server.py  state.py  tools.py
alembic/: env.py
alembic/versions/: 0001_data_analyst.py  0001_initial.py  0002_add_files_and_runs.py  0002_analyst.py  0002_data_analyst.py  0002_datachat.py  0002_datasets_queries.py  0002_phase1.py  0002_supplier_dossier.py  0003_profile_followups.py  0877a8ef6869_initial.py  1b427cf1b124_initial.py  1f350cbaadde_initial.py  3c3baf965a3b_initial.py  4e5e9d30239c_initial.py  618f82607281_add_analyst_tables.py  62474aebefef_phase1_datasets_conversations_turns.py  a1b2c3d4e5f6_add_last_result_csv_to_messages.py  aa98a99e637a_datasets_runs_dataset_id.py  abd80844d137_add_contacts_json_to_leads.py  abe038cd88bd_initial.py  ba88f74aeae7_initial.py
css/: style.css
docs/: zer0-deck.html
evals/: dataset.py  harness.py
frontend/: .npmrc  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/app/: ChatPage.js  layout.tsx
frontend/components/: AppContext.tsx  DatasetsScreen.tsx  QueryScreen.tsx  SessionSidebar.tsx
frontend/lib/: api.ts
harness/: README.md  layout.md
harness/agents/: agent-builder.md
harness/benchmark/: rubric.md
harness/patterns/: agentic-ai.md  engineering.md  guardrails-and-hitl.md  interface.md  model-and-providers.md  observability-and-evals.md  persistence.md  phases.md  project-layout.md  react-agent.md  tech-stack.md  test-driven.md  tools-and-mcp.md  ui-ux.md  ux.md  working-with-llms.md
harness/process/: README.md
harness/recipes/: README.md
harness/rules/: ai-agents.md  git.md  gotchas.md  non-negotiables.md  spec-driven.md  tech-stack.md  testing.md
harness/workflows/: build.md  gates.md
js/: app.js
logs/: PLAN.md  README.md
logs/analysis/: coord-model.md  spec-review-fixes.md
logs/sessions/: 2026-06-21-restructure-zer0.md  2026-06-22-013510-v2-test-2.md  2026-06-22-041400-v2-2-autonomous-harden.md  2026-06-22-045955-v2.md
reports/: implementation-plan.md
reports/sessions/: 2026-04-23-phase1-feat-blog-generator.md  2026-04-24-000712-test-2.md  2026-04-24-090000-test-3.md  (+9 more)
samples/: sample_sales.csv
scripts/: build-data.js  demo_gate.sh  preflight.py  reset.py
spec/: README.md  ROADMAP.md  agent-graph.md  agent.md  api.md  architecture.md  data-model.md  data.md  delivery-plan.md  product.md  roadmap.md  tech-stack.md  ui.md  vision.md
src/: __main__.py  admin.html  assessment.html  config.py  duck.py  graph.py  index.html  plan.html  runner.py  server.py  state.py
src/api/: app.py  (+22 more)
src/bloggen/: .env.example  README.md  pyproject.toml
src/bloggen/config/: settings.py
src/bloggen/src/bloggen/: __main__.py
src/bloggen/src/bloggen/config/: settings.py
tests/: conftest.py  helpers.py  test_analyst_fr.py  test_api_flow.py  test_audit.py  test_config.py  test_demo_gate.py  test_escalate_ticket_gate.py  test_eval_lint.py  test_extensions.py  test_llm_live_fr.py  test_loop.py  test_memory.py  test_phase1.py  test_phase1_agent.py  test_phase1_analyze.py  test_phase1_api.py  test_phase1_executor.py  test_phase1_privacy.py  test_phase1_profile.py  test_query.py  test_richoutput_fr.py  test_summarize_thread_gate.py  test_tokens_fr.py  test_triage_ticket_gate.py
ui/: package.json
(+791 files in other folders)
