[project]
name = "datachat"
version = "0.1.0"
description = "DataChat — a CSV data-analysis agent: upload CSVs, ask questions in natural language."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2.50",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "sqlglot>=25.0",
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "mcp>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datachat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
